--- a/startbootstrap-grayscale-gh-pages/css/styles.css
+++ b/startbootstrap-grayscale-gh-pages/css/styles.css
@@ -11080,7 +11080,7 @@ body {
   font-size: 2.5rem;
   line-height: 2.5rem;
   letter-spacing: 0.8rem;
-  background: linear-gradient(rgba(255, 255, 255, ), rgba(255, 255, 255, 0.50));
+  background: linear-gradient(rgba(255, 255, 255, 0.99), rgba(255, 255, 255, 0.55));
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
           background-clip: text;
